--- a/clang-format/Dockerfile
+++ b/clang-format/Dockerfile
@@ -3,7 +3,9 @@ LABEL maintainer="Pat Brisbin <pbrisbin@gmail.com>"
 ENV LANG en_US.UTF-8
 RUN \
   apt-get update -y && \
-  apt-get install -y clang-format
+  apt-get install -y --no-install-recommends \
+    clang-format=1:9.0-49~exp1 && \
+  rm -rf /var/lib/apt/lists/*
 RUN mkdir -p /code
 WORKDIR /code
 ENTRYPOINT []
